<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:http="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:orientation="vertical">-->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:http="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="#12B0E8"
        http:cardCornerRadius="10dp"
        http:cardElevation="30dp"
        http:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_parent_profile_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="First Parent"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_parent_profile_name_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:ems="10"
                android:text="@string/parent_name_01"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_gender_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:text="@string/parent_gender_01"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_dob_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:text="@string/parent_date_of_birth_01"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_income_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:hint="@string/parent_income_01"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Second Parent"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_parent_profile_name_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:ems="10"
                android:text="@string/parent_name_02"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_gender_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:text="@string/parent_gender_02"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_dob_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:text="@string/parent_date_of_birth_02"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_income_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:text="@string/parent_income_02"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Address"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_parent_profile_primary_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:ems="10"
                android:text="@string/parent_primary_address"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_secondary_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:text="@string/parent_secondary_address"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:text="@string/parent_city"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:text="@string/parent_district"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:text="@string/parent_pincode"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:text="@string/parent_state"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Account"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_parent_profile_primary_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/black"
                android:padding="10dp"
                android:text="@string/parent_primary_phone_number"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_parent_profile_secondary_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="40dp"
                android:background="@android:color/black"
                android:padding="10dp"
                android:text="@string/parent_secondary_phone_number"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>
</androidx.cardview.widget.CardView>
<!--</ScrollView>-->